# pptx_layout_engine

./: README.md  pyproject.toml
src/pptx_layout_engine/: __init__.py  builder.py  utils.py
src/pptx_layout_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pptx_layout_engine/resources/powerpoint_templates/: template.pptx
src/pptx_layout_engine/resources/shape_layouts/: shape_defaults.yml
src/pptx_layout_engine/resources/slide_layouts/: bullet_slide.yml  comparison.yml  content_with_caption.yml  dlg_title_slide.yml  image_focus.yml  section_header.yml  table_summary.yml  title_and_content.yml  title_only.yml  title_slide.yml  two_bullet_slide.yml  two_content.yml
tests/: print_placeholders.py  slide_deck.yml  test.py  test_output.pptx
